A-Stream: Use Java Streams in TaskList, Storage, Ui and CheerQuotes
List iteration and filtering were done with manual for loops and
mutable accumulators. Refactoring to Streams makes the intent
clearer and aligns with idiomatic Java.

- TaskList: findTasks and getDeadlinesOn use stream().filter().toList()
- Storage: load() parses lines via map/filter; save() maps tasks to lines
- Ui: showList, showMatchingTasks, showDeadlinesOn use IntStream.range;
  showHelp uses Arrays.stream(HELP_COMMANDS).forEach
- CheerQuotes: use .toList() and return List.of() for empty cases